<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Helical_Conveyor_Design</string>


    //String de activity "logueo"
    <string name="et_logueo_Mail_String">mail</string>
    <string name="et_logueo_Password_String">password</string>
    <string name="btn_logueo_Ingresar_String">Ingresar</string>
    <string name="btn_logueo_CrearCuenta_String">Crear Cuenta</string>
    <string name="btn_logueo_IngresarComoInvitado_String">Ingresar como Invitado</string>
    <string name="et_logueo_nickInvitado_String">Nick Invitado</string>
    <string name="toast_logueo_noCuenta_String">Tu mail no ha sido registrado</string>


    //String de activity "invitado"
    <string name="et_invitado_nickName_String">Nick Name</string>
    <string name="tv_invitado_HolaInvitado_String">Hola</string>
    <string name="btn_invitado_nuevo_String">Nuevo</string>
    <string name="btn_invitado_adminProyectActual">Administrar Proyecto Actual</string>


    //String de activity"Crear Cuenta"
    <string name="et_crearcuenta_mail_String">mail</string>
    <string name="et_crearcuenta_password_String">password</string>
    <string name="et_crearcuenta_confirmarpassword_String">confirmar password</string>
    <string name="et_crearcuenta_nickUsuario_String">Nick Usuario</string>
    <string name="et_crearcuenta_profesionoficio_String" tools:ignore="Typos">Profesion u Oficio</string>
    <string name="btn_crearcuenta_registrar_String">Registrar</string>
    <string name="toast_cuentaCreada">Su cuenta ha sido registrada</string>
    <string name="toast_rellenarCampos">Debe rellenar todos los campos antes de crear una cuenta</string>

    // Strings de activity "inicio"
    <string name="btn_inicio_nuevo_String">Nuevo</string>
    <string name="btn_inicio_administrarDatos_String">Administrar Datos</string>
    <string name="btn_inicio_proyectosComunidad_String">Proyectos de la Comunidad</string>
    <string name="tv_Bienvenido">Bienvenido</string>


    //Strings del fragment "nuevo"
    <string name="btn_nuevo_proyecto_String">Nuevo Proyecto</string>
    <string name="btn_nuevo_sistemaHelicoidal_String">Nuevo Sistema de Transporte Helicoidal</string>
    <string name="btn_nuevo_material_String">Nuevo Material</string>
    <string name="btn_nuevo_motor_String">Nuevo Motor</string>
    <string name="btn_nuevo_transportador_String">Nuevo Transportador</string>
    <string name="btn_nueva_helice_String">Nueva Helice</string>
    <string name="btn_nuevo_tubo_String">Nuevo Tubo</string>
    <string name="tv_nuevo">Nuevo</string>
    <string name="descripcion_nuevo_proyecto_String">NuevoProyecto</string>
    <string name="descripcion_nuevo_sistemaHelicoidal_String">NuevoSistemaHelicoidal</string>
    <string name="descripcion_nuevo_material_String">NuevoMaterial</string>
    <string name="descripcion_nuevo_motor_String">NuevoMotor</string>
    <string name="descripcion_nuevo_transportador_String">NuevoTransportador</string>
    <string name="descripcion_nuevo_helice_String">NuevaHelice</string>
    <string name="descripcion_nuevo_tubo_String">NuevoTubo</string>


    //Strings del fragment "administrar proyecto actual"
    <string name="tv_administrar_proyectoactual_String">Administrar Proyecto Actual</string>
    <string name="btn_adminPoryectoActual_sistemaHelicoidal_String">Administrar Sistema de Transporte Helicoidal</string>
    <string name="btn_adminPoryectoActual_material_String">Administrar Material</string>
    <string name="btn_adminPoryectoActual_motor_String">Administrar Motor</string>
    <string name="btn_adminPoryectoActual_transportador_String">Administrar Transportador</string>
    <string name="btn_adminPoryectoActual_helice_String">Administrar Helice</string>
    <string name="btn_adminPoryectoActual_tubo_String">Administrar Tubo</string>


    //Strings de activity "nuevo proyecto"
    <string name="et_nuevoProyecto_nombreProyecto_String">Ingrese el nombre del proyecto</string>

    //Strings de activity "nuevo material"
    <string name="tv_nombreMaterial_String">Nombre Material</string>
    <string name="et_NombreMaterial_String">Introduzca el nombre del material</string>
    <string name="tv_nuevo_material_selecTipoMezcla_String">Seleccionar Tipo de Mezcla</string>
    <string name="rb_mezclaHomogenea_String">Mezcla Homogenea</string>
    <string name="rb_mezclaHeterogenea_String">Mezcla Heterogenea</string>
    <string name="tv_clasificacionMaterial_String">Seleccione la clasificacion del Material</string>
    <string name="tv_densidad_String">Densidad promedio</string>
    <string name="tv_abrasividad_String">Abrasividad</string>
    <string name="tv_fluidez_String">Fluidez</string>
    <string name="tv_tipoMaterial_String">Tipo de material</string>
    <string name="tv_categoriaPeso_String">Categoria de peso</string>

    //"nueva helice" Strings de activity
    <string name="tv_nuevaHelice_strings">Nueva Helice</string>
    <string name="et_nuevaHelice_strings">Introduzca el nombre de la helice</string>

    //"Administrar Datos" Strings
    <string name="tv_administrardatos_Strings">Administrar Datos</string>
    <string name="btn_administrarDatosUsuario_String">Administrar Datos de Usuario</string>
    <string name="btn_administrarProyectosGuardados_String">Administrar Proyectos Guardados</string>
    <string name="btn_administrarProyectoActual_String">Administrar Proyecto Actual</string>
    <string name="btn_administrarParametros_String">Administrar Parametros</string>

    //Administrar Parametros Strings
    <string name="tv_administrarParametros_String">Administrar Parametros</string>
    <string name="tv_administrarMotores_String">Administrar Motores</string>
    <string name="tv_administrarMateriales_String">Administrar Materiales</string>
    <string name="tv_administrarSistemasTransporte_String">Administrar Sistemas de Transporte Helicoidal</string>
    <string name="tv_administrarTransportadores_String">Administrar Transportadores</string>
    <string name="tv_administrarHelices_String">Administrar Helices</string>
    <string name="tv_administrarTubos_String">Administrar Tubos</string>

    //Strings de activity "Administrar proyectos Guardados"
    <string name="tv_administrarProyectosGuardados_strings">Proyectos Guardados</string>

    //Nuevo Motor Strings
    <string name="btn_nuevoMotor_String">Boton NuevoMotor</string>
    <string name="tv_establecerPosicion_String">Establecer posicion de instalacion</string>
    <string name="et_nombreNuevoMotor_String">Ingresa el nombre para tu motor</string>
    <string name="tv_SeleccionaParametros_String">Confguracion de Motor</string>
    <string name="rbtn_posicionSuperior_String">Seccion Superior</string>
    <string name="rbtn_posicionInferior_String">Seccion Inferior</string>
    <string name="rbtn_sentidoGiroAntiHorario_String">Sentido AntiHorario</string>
    <string name="rbtn_sentidoGiroHorario_String">Sentido Horarior</string>
    <string name="btn_crearMotor_String">Crear Motor</string>


    //Strings de activity "proyectos de la comunidad"
    <string name="tv_proyectosComunidad_String">Proyectos de la Comunidad</string>
    <string name="tv_nombreProyecto_recyclerview_String">Proyecto Generico 1</string>
    <string name="tv_mailUsuario_recyclerview_String">mail.generico@gmail.com</string>
    <string name="tv_nickUsuario_recyclerview_String">nickGenerico</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imagen_de_fondo">Imagen de fondo</string>

    //Recycler Administrar Materiales
    <string name="tv_administrarMaterialesId_String">Id Material: </string>
    <string name="tv_administrarMaterialesNombreMaterial_String">Nombre Material: </string>
    <string name="tv_administrarMaterialesTipoMezcla_String">Tipo de Mezcla: </string>
    <string name="tv_administrarMaterialesTipoMaterial_String">Tipo de Material: </string>
    <string name="tv_administrarMaterialesAbrasividad_String">Abrasividad: </string>
    <string name="tv_administrarMaterialesDensidad_String">Densidad Promedio: </string>
    <string name="tv_administrarMaterialesFluidez_String">Fluidez: </string>
    <string name="tv_administrarMaterialesClasificacionMaterial_String">Clasificacion de Material: </string>
    <string name="tv_administrarMaterialesCategoriaPeso_String">Categoria de Peso: </string>
    <string name="tv_administrarMaterialesDescripcionImagen_String">Imagen Material</string>
    <string name="imagen_de_prueba">imagen de prueba</string>

   //Administrar motores
    <string name="buscar_motor">buscar motor</string>


</resources>