<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="material"
            type="com.example.helical_conveyor_design.data.model.Material" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/imagen_de_prueba"
            android:id="@+id/iv_recyclerListRow"
            app:url="@{material.imagenMaterial}"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/tv_recycyclerAdministrarMateriales_nombreMaterial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:textColor="@color/black"
                android:hint="@string/tv_administrarMaterialesNombreMaterial_String"
                android:text="@{material.nombreMaterial}"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_recycyclerAdministrarMateriales_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/tv_administrarMaterialesId_String"
                android:text="@{material.idMaterial}"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_recycyclerAdministrarMateriales_tipoMezcla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/tv_administrarMaterialesTipoMezcla_String"
                android:text="@{material.tipoMezcla}"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_recycyclerAdministrarMateriales_tipoMaterial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/tv_administrarMaterialesTipoMaterial_String"
                android:text="@{material.tipoMaterial}"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_recycyclerAdministrarMateriales_abrasividad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{material.abrasividad}"
                android:hint="@string/tv_administrarMaterialesAbrasividad_String"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_recycyclerAdministrarMateriales_densidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{Double.toString(material.densidad)}"
                android:hint="@string/tv_administrarMaterialesDensidad_String"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_recycyclerAdministrarMateriales_fluidez"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/tv_administrarMaterialesFluidez_String"
                android:text="@{material.fluidez}"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_recycyclerAdministrarMateriales_clasificacionMaterial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/tv_administrarMaterialesClasificacionMaterial_String"
                android:text="@{material.clasificacionMaterial}"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_recycyclerAdministrarMateriales_categoriaPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/tv_administrarMaterialesCategoriaPeso_String"
                android:text="@{material.categoriaPeso}"
                android:textSize="18sp"/>

        </LinearLayout>

    </LinearLayout>

</layout>